--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style/index.css"/>
+    <title>Personal Project</title>
 </head>
 <body>
-    
+    <header>
+        <div class="top">
+            <h1>Cristian Fernandez</h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Projects</a>
+            </nav>
+            <h2>Introducing My Site</h2>
+            <p id="about">This is where the paragrapg goes. I am currently 22 years old working to become a full stack developer. fasdddddddddddddddddddddddddddddddddddddddd</p>
+        </div>
+        <section>
+            <div>
+                <img src="https://images.unsplash.com/photo-1522778119026-d647f0596c20?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            </div>
+        </section>
+        <section id="projects">
+            <img src="https://images.unsplash.com/photo-1555099962-4199c345e5dd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            <img src="https://images.unsplash.com/photo-1457470572216-1240fac24b37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            <img src="https://images.unsplash.com/photo-1583236728325-aa6cd12594a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            <img src="https://images.unsplash.com/photo-1548686304-5c3be888a00b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            <p>some text describing pictures will go here</p>
+        </section>
+        <footer>
+            <nav>
+                <a href="#">Contact Me</a>
+            </nav>
+        </footer>
+    </header>
 </body>
 </html>
