now working on footer

--- a/index.html
+++ b/index.html
@@ -11,24 +11,30 @@
         <div class="top">
             <h1>Cristian Fernandez</h1>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Projects</a>
+                <a class="btn-1" href="#">Home</a>
+                <a class="btn-2" href="#">About</a>
+                <a class="btn-3" href="#">Contact</a>
+                <a class="btn-4" href="#">Projects</a>
             </nav>
             <h2>Introducing My Site</h2>
             <p id="about">This is where the paragrapg goes. I am currently 22 years old working to become a full stack developer. fasdddddddddddddddddddddddddddddddddddddddd</p>
         </div>
-        <section>
-            <div>
-                <img src="https://images.unsplash.com/photo-1522778119026-d647f0596c20?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt=""/>
-            </div>
+        <section class="hero-img">
+           
         </section>
         <section id="projects">
-            <img src="https://images.unsplash.com/photo-1555099962-4199c345e5dd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
-            <img src="https://images.unsplash.com/photo-1457470572216-1240fac24b37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
-            <img src="https://images.unsplash.com/photo-1583236728325-aa6cd12594a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
-            <img src="https://images.unsplash.com/photo-1548686304-5c3be888a00b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            <div>
+                <img src="https://images.unsplash.com/photo-1517747614396-d21a78b850e8?ixlib=rb-1.2.1&auto=format&fit=crop&w=564&q=80" alt=""/>
+            </div>
+            <div>
+                <img src="https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt=""/>
+           </div>
+           <div>
+                <img src="https://images.unsplash.com/photo-1547941126-3d5322b218b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt=""/>
+            </div>
+            <div>
+                <img src="https://images.unsplash.com/photo-1548686304-5c3be888a00b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt=""/>
+            </div>
             <p>some text describing pictures will go here</p>
         </section>
         <footer>
