nevermind, forgot to add the footer. now officially done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="top">
             <h1>Cristian Fernandez</h1>
-            <nav>
+            <nav class="a">
                 <a class="btn-1" href="#">Home</a>
                 <a class="btn-2" href="#">About</a>
                 <a class="btn-3" href="#">Contact</a>
@@ -39,7 +39,7 @@
 
         </div>
         <footer>
-            
+            <button>Contact Me</button>
         </footer>
     </header>
 </body>
