changed the size of my p to look smaller and better

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a class="btn-4" href="#">Projects</a>
             </nav>
             <h2>Introducing My Site</h2>
-            <p id="about">This is where the paragrapg goes. I am currently 22 years old working to become a full stack developer. fasdddddddddddddddddddddddddddddddddddddddd </p>
+            <p id="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea cumque eligendi ullam deleniti animi, eaque cum nobis! Repudiandae minus, nesciunt a doloremque, nisi animi vero veniam voluptatem quis asperiores soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non autem nobis nulla, itaque voluptas saepe maiores? Similique blanditiis doloribus nemo exercitationem qui, distinctio deleniti, alias sint, provident quisquam error repellendus!</p>
         </div>
         <section class="hero-img">
            
